fixed spacing issue

--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -3984,7 +3984,7 @@ font-familt: "Museo Slab";
 	}
 	.order-tagline {
 		font-weight: 100;
-		font-size: 2.3em;
+		font-size: 2em;
 		margin-bottom: 1.4em;
 	}
 	.order-tagline b {
